Fixed text bleed
Dockerfile example was bleeding off the background so increased min width of the body to prevent that.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,7 +76,7 @@ pre {
   margin-right: 15%;
   border-style: solid;
   background-color: rgb(249, 249, 249);
-  min-width: 500px;
+  min-width: 1200px;
   min-height: 300px;
 }
 
@@ -165,15 +165,15 @@ Portfolio css
   border-color: grey;
   border-width: 1px;
   margin-bottom: 15px;
-  margin-left: 10px;
+  margin-left: 5px;
   margin-right: 10px;
-  padding-left: 10px;
+  padding-left: 2px;
   padding-bottom: 1px;
   padding-top: 1px;
   background-color: rgb(238, 240, 240);
   font-size: 12px;
   font-family: sans-serif;
-  min-width: 250px;
+  min-width: 280px;
   white-space: pre;
 }
 
